add swagger v3