@@ -10,8 +10,10 @@ import org.springframework.stereotype.Service;
 import ru.geekbrains.data.entity.Product;
 import ru.geekbrains.data.repository.ProductRepository;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductRepositoryService {
@@ -24,7 +26,11 @@ public class ProductRepositoryService {
     public List<Product> findPage(Integer page) {
         Pageable pageable = PageRequest.of(page-1, INPUTS_NUMBER);
         Page<Product> list = pr.findAll(pageable);
-        return list.stream().toList();
+        return list.stream()
+                .toList()
+                .stream()
+                .sorted(Comparator.comparing(Product::getCost))
+                .collect(Collectors.toList());
     }
 
     public void deleteById(long id) {
